font-family 제거 기능 추가

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     tag.style.removeProperty('color');
     tag.style.removeProperty('background-color');
     tag.style.removeProperty('text-align');
+    tag.style.removeProperty('font-family');
     if (tag.style.length === 0) {
       tag.removeAttribute('style');
 
