letter-spacing 제거 기능 추가

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     tag.style.removeProperty('background-color');
     tag.style.removeProperty('text-align');
     tag.style.removeProperty('font-family');
+    tag.style.removeProperty('letter-spacing');
     if (tag.style.length === 0) {
       tag.removeAttribute('style');
 
