--- a/index.html
+++ b/index.html
@@ -66,6 +66,23 @@
       margin: 0;
       color: #6c757d;
       font-size: 1.1rem;
+      flex: 1;
+    }
+    .github-button {
+      padding: 0.5rem 1rem;
+      background-color: #24292e;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      transition: background-color 0.2s;
+    }
+    .github-button:hover {
+      background-color: #2f363d;
+      color: white;
     }
     .tooltip-custom {
       position: fixed;
@@ -98,8 +115,14 @@
     <div class="header-container">
       <h1 class="header-title">Tistory HTML 편집기</h1>
       <p class="header-description">
-        Tistory에서 복사 붙여넣기로 인해 발생하는 불필요한 스타일을 자동으로 제거하고, 본문을 깔끔하게 포맷팅해주는 편집기
+        Tistory에서 복사 붙여넣기로 인해 발생하는 불필요한 스타일을 자동으로 제거하고,<br/>본문을 깔끔하게 포맷팅해주는 편집기
       </p>
+      <a href="https://github.com/psh10066/tistory-html-formatter" target="_blank" class="github-button">
+        <svg height="16" width="16" viewBox="0 0 16 16" fill="currentColor">
+          <path d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"></path>
+        </svg>
+        GitHub
+      </a>
     </div>
     
     <div class="instruction-container mb-4">
